<resources>
    <string name="app_name">TrackCovid</string>
    <string name="population">Population</string>
    <string name="textview">TextView</string>
    <string name="cases">Cases</string>
    <string name="empty_location">Location Not Selected</string>
    <string name="change">Change</string>
    <string name="use_gps_button">Use GPS Location</string>
    <string name="manual_select_button">Choose Location</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="refresh_API_data">Refresh API Data</string>
    <string name="todays_cases">Active Cases</string>
    <string name="change_since_yesterday">Change since yesterday</string>
    <string name="please_refresh_data">Please Refresh Data</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signout">Sign out</string>
    <string name="user">User</string>
    <string name="register">Register</string>
    <string name="use_gps_help">TIP: If you are unable to get a GPS reading, please try disabling WiFi, enabling Mobile Data, and make sure Location Services is enabled. </string>
    <string-array name="test_country_array">
        <item>Test</item>
        <item>Canada</item>
        <item>United States</item>
        <item>India</item>
    </string-array>
    <string-array name="test_province_array">
        <item>Test</item>
        <item>Ontario</item>
        <item>Vancouver</item>
        <item>Nova Scotia</item>
    </string-array>
    <string-array name="Provinces">
        <item>British Columbia</item>
        <item>Alberta</item>
        <item>Saskatchewan</item>
        <item>Manitoba</item>
        <item>Ontario</item>
        <item>Quebec</item>
        <item>New Brunswick</item>
        <item>Nova Scotia</item>
        <item>Prince Edward Island</item>
        <item>Newfoundland and Labrador</item>
        <item>Yukon</item>
        <item>Northwest Territories</item>
        <item>Nunavut</item>
    </string-array>
</resources>