<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Country"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="Hello World!"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/pop"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/population"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/population"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="Cases:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cases"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/textview" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/empty_location"
            android:textSize="16dp"
            android:gravity="center"
            />
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            ></Space>

        <Button
            android:id="@+id/change_location_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/change"
            />

    </LinearLayout>

</RelativeLayout>